ecmascript/parser/tests/test262-error-references/fail/9fc618bb96c91f1b.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/9fc618bb96c91f1b.js:1:4
  |
1 | 0O18
  |    ^

